[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ainsworth"
version = "0.1.0"
description = "A simple example module"
authors = [{ name = "Ainsworth Coultart", email = "ainsworthcoultart@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
dependencies = []
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/a-842/ainsworth"
